# spatula

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  Dockerfile  README.md  cmd_append_topk_tsv.cpp  cmd_assign_feature2bin.cpp  cmd_build_spatial_barcodes.cpp  cmd_combine_sbcd.cpp  cmd_combine_sge.cpp  cmd_convert_sge.cpp  cmd_custom_demux_fastq.cpp  cmd_dge2sdge.cpp  cmd_diffexp_decode.cpp  cmd_diffexp_model_matrix.cpp  cmd_diffexp_pseudobulk.cpp  cmd_draw_3way.cpp  cmd_draw_polygons.cpp  cmd_draw_sge.cpp  cmd_draw_tsv.cpp  cmd_draw_xy.cpp  cmd_eval_dups_sbcd.cpp  cmd_filter_common_barcodes.cpp  cmd_filter_fastqs.cpp  cmd_filter_tsv.cpp  cmd_hist.cpp  cmd_join_pixel_decode.cpp  cmd_join_pixel_tsv.cpp  cmd_make_spatial_dge.cpp  cmd_match_spatial_barcodes.cpp  cmd_match_tag.cpp  cmd_merge_matched_tags.cpp  cmd_merge_pseudobulk.cpp  cmd_merge_sptsv.cpp  cmd_mex2sptsv.cpp  cmd_mex_subset.cpp  cmd_pair_pseudobulk_from_decode.cpp  cmd_paste_pixel_tsv.cpp  cmd_pixel2sptsv.cpp  (+44 more)
.github/: CODEOWNERS
docs/: index.md  install.md  quickstart.md  tools.md
docs/tools/: append_topk_tsv.md  assign_feature2bin.md  build_sbcds.md  combine_sbcds.md  combine_sge.md  convert_sge.md  custom_demux_fastq.md  dge2sge.md  diffexp_decode.md  diffexp_model_matrix.md  draw_3way.md  draw_polygons.md  draw_sge.md  draw_tsv.md  draw_xy.md  eval_dups_sbcds.md  filter_common_barcodes.md  filter_fastqs.md  filter_tsv.md  hist.md  join_pixel_decode.md  join_pixel_tsv.md  make_sdge.md  match_sbcds.md  match_tag.md  merge_matched_tags.md  merge_pseudobulk.md  merge_sptsv.md  mex2sptsv.md  pair_pseudobulk_from_decode.md  paste_pixel_tsv.md  pixel2sptsv.md  pixels2cells.md  png_mono2rgba.md  pseudobulk_from_decode.md  reformat_fastqs.md  reformat_fastqs_mt.md  reformat_tsv.md  search_tag.md  segment_sge.md  (+10 more)
install/: index.html
quickstart/: index.html
search/: search_index.json
submodules/: build.sh  clean.sh
tools/: index.html
tools/append_topk_tsv/: index.html
tools/build_sbcds/: index.html
tools/combine_sbcds/: index.html
tools/convert_sge/: index.html
tools/custom_demux_fastq/: index.html
tools/dge2sge/: index.html
tools/diffexp_model_matrix/: index.html
tools/draw_3way/: index.html
tools/draw_sge/: index.html
tools/draw_xy/: index.html
tools/eval_dups_sbcds/: index.html
tools/filter_common_barcodes/: index.html
tools/filter_fastqs/: index.html
tools/hist/: index.html
tools/join_pixel_decode/: index.html
tools/join_pixel_tsv/: index.html
tools/match_sbcds/: index.html
tools/merge_pseudobulk/: index.html
tools/merge_sptsv/: index.html
tools/mex2sptsv/: index.html
tools/pseudobulk_from_decode/: index.html
tools/reformat_fastqs/: index.html
tools/reformat_tsv/: index.html
tools/sptsv2mex/: index.html
tools/sptsv2model/: index.html
tools/subset_sge/: index.html
